# demo

./: .gitpod.yml  0.bootstrap.js  Cargo.toml  LICENSE  README.md  bootstrap.js  index.html
.github/workflows/: deploy-pages.yml
src/: lib.rs  ls.rs  open.rs  panic_hook.rs  random_dice.rs  sys.rs
www/: bootstrap.js  index.html  index.js  module.js  package-lock.json  package.json  webpack.config.js
